fix one more warning